feat(covers): 添加覆盖板复制粘贴工具功能
- 在 Cover 接口中添加 allowsCopyPasteTool() 方法以控制是否允许复制
- 为 CoverBase 添加通用 NBT 同步功能用于复制粘贴数据传输
- 实现 CoverCopyPasteBehavior 类提供完整的复制粘贴工具逻辑
- 在 CoverCraftingTable 和 CoverStorage 中禁用复制粘贴防止物品复制
- 为 DetectorBase 覆盖类添加对父类读取自定义数据的支持
- 添加新的 GregtechDataCodes.UPDATE_COVER_NBT 数据码用于 NBT 同步
- 添加 tool.cover_copy_paste 物品及相应配方和模型文件
- 扩展 EntityDamageUtil 类添加批量伤害方法优化管道伤害逻辑
- 更新语言文件添加复制粘贴工具的相关翻译
- 在 ToolEventHandlers 中注册复制粘贴工具的事件处理
- 重构 Hazard 类的装甲抗性提示逻辑使其更加清晰